k8s/frontend-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendproxy
  labels:
    app: frontendproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontendproxy
  template:
    metadata:
      labels:
        app: frontendproxy
    spec:
      containers:
        - name: frontendproxy
          image: ghcr.io/open-telemetry/demo:1.12.0-frontendproxy
          imagePullPolicy: IfNotPresent
          
          ports:
            - containerPort: 8080
              name: http
          
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
