k8s/frontend-proxy/servic.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendproxy
  labels:
    app: frontendproxy
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
  selector:
    app: frontendproxy
